--- a/templates/emailremind.html
+++ b/templates/emailremind.html
@@ -21,10 +21,10 @@
           <tr><th style= "font-size = 20px">Equipment</th><th>Date</th><th>Start</th><th>End</th><th>Note</th></tr>
         </thead>
           <tbody>
-            {% for item in dataArray %}
+            {% for sessionInfo in dataArray %}
               <tr><td style= "text-align: center; font-size: 20px">
-              {% for x in item %}
-                {{x}}</td><td style="text-align: center; font-size: 20px">
+              {% for session in sessionInfo %}
+                {{session}}</td><td style="text-align: center; font-size: 20px">
               {% endfor %}
               </td></tr>
             {% endfor %}
