added optout link to email message

--- a/templates/emailremind.html
+++ b/templates/emailremind.html
@@ -36,7 +36,7 @@
         monthly usage invoices. Keeping the schedule accurate not only saves research
         funds but also allows other researchers to use the equipment effectively</p>
 
-      <p> <a target= _blank href="http://cloudtobago.com">Click here to Unsubscribe from reminder email list</a> </p>
+      <p> <a "target" = _blank href="http://cloudtobago.com">Click here to Unsubscribe from reminder email list</a> </p>
 
       <p>Thank you for using our core facilities,</p>
 
